--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -11,7 +11,7 @@ _April 03rd, 2025_
 
 From this Console release you can enable AI agentic features on your Company and Projects!
  
-By turning on the "AI settings" toggle in the Company Settings page, you activate Mia-Assistant as an agent that access data within your Projects across your Company. This allows users to execute AI commands directly within their Projects.
+By turning on the "AI settings" toggle in the Company Settings page, you activate Mia-Assistant as an agent that accesses data within your Projects across your Company. This allows users to execute AI commands directly within their Projects.
 
 For more details, check the related [documentation](/console/company-configuration/settings.md).
 
