--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -5,16 +5,7 @@ sidebar_label: v13.7.0
 image: "img/release-note-link-preview.png"
 ---
 
-_March 20th, 2025_
-
-:::info
-
-Mia-Platform Console v13.7.0 is **now in Preview** and will be generally available on April 03rd.
-
-Console SaaS users can try out v13.7.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_April 03rd, 2025_
 
 ## Monitor Audit Logs of your Company
 
@@ -52,6 +43,14 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 
 ## Marketplace
 
+### New Marketplace Components
+
+#### Integration Connector Agent plugin
+
+The **Integration Connector Agent** plugin enables seamless integration between external data sources and sinks. It collects data from sources like **Mia-Platform Console** and **Jira**, processes it, and sends it to sinks such as **MongoDB**.  
+This can be particularly useful for centralized storage, data synchronization, and transformation, improving data accessibility across platforms and streamlining workflows for more effective reporting and decision-making.  
+The Integration Connector Agent is currently available in **BETA** (v0.2.0).
+
 ### Marketplace Updates
 
 #### CRUD Service
@@ -60,17 +59,15 @@ The new version `7.2.3` of the CRUD Service is available!
 
 ##### Changed
 
-
 * overhauled Mongo view update logic to avoid requesting [`dropCollection`](https://www.mongodb.com/docs/manual/reference/privilege-actions/#mongodb-authaction-dropCollection) privilege action
 * introduce abort controller to NodeJS stream pipeline to ensure the pipeline object is cleaned up when the response stream is destroyed
 
 ##### Fixed
-
 
 * prevent a memory leak the service was experiencing when it was not able to fulfill incoming requests
 * corrected a typo in option `maxIdleTimeMS` within Mongo client configuration, which prevented the environment variable `MONGODB_MAX_IDLE_TIME_MS` to take effect
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.0.0-beta.1`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.0.0`.
 
