--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -28,7 +28,9 @@ Learn more about the Debug command in the related [Mia-Assistant documentation](
 
 ## Customize Service account name for your Microservices
 
-You can now change the Service account name for your Microservices directly from the new "Service account" section available in the Microservice details page, offering more flexibility and improved access control for your workloads.
+You can now assign a custom Service account name to each of your Microservices directly from the new "Service Account" card in the Microservice details page.
+
+This allows for more granular access control by defining specific Kubernetes RBAC policies per service, improving security and ensuring that each Microservice can communicate with other services or cloud identities using its own dedicated Service Account with specific privileges, instead of relying on the default cluster-wide Service Account.
 
 ## Console
 
