--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -7,6 +7,15 @@ image: "img/release-note-link-preview.png"
 
 _April 03rd, 2025_
 
+:::info
+
+Mia-Platform Console v13.7.1 is **now in Preview** and will be generally available on April 17th.
+
+Console SaaS users can try out v13.7.1 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
+
+For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
+:::
+
 ## AI Agentic Features for your Company
 
 From this Console release you can enable AI agentic features on your Company and Projects!
@@ -58,5 +67,5 @@ This releases uses a fixed length of 64 characters for the DICOM UIDs to ensure 
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.1.0-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.1.0-beta.1`.
 
