--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -42,3 +42,16 @@ export const Highlight = ({children, color}) => (
 ## Secure Cloud Ops
 
 [...]
+
+
+FEATURE IDP (TO DO):
+- Centralized management of the Container Registries
+- Compare different revisions
+- Configuration Saved webhook
+- Specificy the Rate limit for Endpoints' subroutes
+- Support for custom port and HTTP/2 protocol in Endpoints Configuration
+- Kubernetes Import via miactl
+- Auto-generated form in Infrastructure Resource Creation
+- Clone Microservice repository via Cursor AI IDE
+- Monitor Audit Logs of your Company
+- AI Agentic Features for your Company (Debug with Mia-Assistant)
