--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -45,6 +45,9 @@ export const Highlight = ({children, color}) => (
 
 
 FEATURE IDP (TO DO):
+- Environment centric workflow for Projects
+- iframe extensions support login with Console SSO 
+- Projects fro Infrastructure Provisioning
 - Centralized management of the Container Registries
 - Compare different revisions
 - Configuration Saved webhook
