--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -46,15 +46,18 @@ export const Highlight = ({children, color}) => (
 
 FEATURE IDP (TO DO):
 - Environment centric workflow for Projects
+- Projects for Infrastructure Provisioning
+- Kubernetes Import via miactl
 - iframe extensions support login with Console SSO 
-- Projects fro Infrastructure Provisioning
+- Clone Microservice repository via Cursor AI IDE
+- AI Agentic Features for your Company (Debug with Mia-Assistant)
+- Auto-generated form in Infrastructure Resource Creation
 - Centralized management of the Container Registries
+- Monitor Audit Logs of your Company
+
+
 - Compare different revisions
 - Configuration Saved webhook
 - Specificy the Rate limit for Endpoints' subroutes
 - Support for custom port and HTTP/2 protocol in Endpoints Configuration
-- Kubernetes Import via miactl
-- Auto-generated form in Infrastructure Resource Creation
-- Clone Microservice repository via Cursor AI IDE
-- Monitor Audit Logs of your Company
-- AI Agentic Features for your Company (Debug with Mia-Assistant)
+
