--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -19,13 +19,17 @@ export const Highlight = ({children, color}) => (
 
 **Welcome to Mia-Platform v14!**
 
-# AI Native DevX
+## AI Native DevX
 
 [...]
+
+### Clone Microservice repository via Cursor AI IDE 
 
 ## AI Agent Lifecycle
 
 [...]
+
+### AI Agentic Features for your Company - Debug with Mia-Assistant
 
 ## Self-service Applications
 
@@ -39,25 +43,22 @@ export const Highlight = ({children, color}) => (
 
 [...]
 
+### Environment centric workflow for Projects 
+### Projects for Infrastructure Provisioning  
+### Kubernetes Import via miactl 
+### iframe extensions support login with Console SSO 
+### Auto-generated form in Infrastructure Resource Creation 
+### Centralized management of the Container Registries 
+### Monitor Audit Logs of your Company 
+
+bonus ? 
+### Compare different revisions
+### Configuration Saved webhook 
+### Specificy the Rate limit for Endpoints' subroutes
+### Support for custom port and HTTP/2 protocol in Endpoints Configuration
+
 ## Secure Cloud Ops
 
 [...]
 
-
-FEATURE IDP (TO DO):
-- Environment centric workflow for Projects
-- Projects for Infrastructure Provisioning
-- Kubernetes Import via miactl
-- iframe extensions support login with Console SSO 
-- Clone Microservice repository via Cursor AI IDE
-- AI Agentic Features for your Company (Debug with Mia-Assistant)
-- Auto-generated form in Infrastructure Resource Creation
-- Centralized management of the Container Registries
-- Monitor Audit Logs of your Company
-
-
-- Compare different revisions
-- Configuration Saved webhook
-- Specificy the Rate limit for Endpoints' subroutes
-- Support for custom port and HTTP/2 protocol in Endpoints Configuration
 
