--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -47,13 +47,11 @@ export const Highlight = ({children, color}) => (
 
 Mia-Platform Console now features a redesigned environment management system, significantly streamlining your Design workflow. 
 The concept of branches in the Design area has been replaced, with the environment now serving as the central element for each area.   
-Users will work directly within specific environments across all Mia-Platform Console sections, establishing a consistent and intuitive experience and aligning the Design area with the logical structure of other areas.
+Users will work directly within specific environments across all Mia-Platform Console sections, establishing a consistent and intuitive experience and aligning the Design area with the logical structure of other Mia-Platform Console areas.
 
 ### Projects for Infrastructure Provisioning  
 
-We have introduced a new category of Projects within Mia-platform Console designed to streamline infrastructure management for Operations teams.  
-These Projects are specialized for provisioning and managing infrastructure resources directly through the Console interface.  
-Teams can now easily visualize and control the state of their infrastructure and execute necessary provisioning actions, enabling more efficient and tailored workflows for infrastructure-related tasks. 
+Take greater control over your infrastructure provisioning with the new dedicated Project category in the Mia-Platform Console. Designed for Operations teams, these specialized Projects facilitate management of infrastructure resources within the Console, aligning with Infrastructure as Code practices. Easily visualize and manage your infrastructure state, and execute provisioning actions with improved efficiency for your infrastructure-related tasks.
 
 ### Kubernetes Import via miactl 
 
