--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -25,11 +25,16 @@ export const Highlight = ({children, color}) => (
 
 ### Clone Microservice repository via Cursor AI IDE 
 
+Now you can easily clone your Microservice repository into the Cursor AI IDE directly from the Mia-Platform Console. This integration provides an easy way to access your service code, enabling a smoother development experience powered by the intelligence of Cursor AI, with support for both `ssh` and `https` protocols.
+
 ## AI Agent Lifecycle
 
 [...]
 
 ### AI Agentic Features for your Company - Debug with Mia-Assistant
+
+Mia-Platform Console now brings the agentic power of AI to your Company and Projects. Just ensure the "AI settings" toggle is active to enable Mia-Assistant's access to your resources and start using its features, beginning with **Debug with Mia-Assistant**.  
+When inside any Project, simply type `/debug` in the Mia-Assistant chat and start asking insights about your Runtime!
 
 ## Self-service Applications
 
