--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -33,7 +33,7 @@ Now you can easily clone your Microservice repository into the Cursor AI IDE dir
 
 ### AI Agentic Features for your Company - Debug with Mia-Assistant
 
-Mia-Platform Console now brings the agentic power of AI to your Company and Projects. Just ensure the "AI settings" toggle is active to enable Mia-Assistant's access to your resources and start using its features, beginning with **Debug with Mia-Assistant**.  
+Mia-Platform Console now brings the agentic power of AI to your Company and Projects. Just ensure the "AI settings" toggle is active to enable Mia-Assistant access to your resources and start using its features, beginning with **Debug with Mia-Assistant**.  
 When inside any Project, simply type `/debug` in the Mia-Assistant chat and start asking insights about your Runtime!
 
 ## Self-service Applications
