--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -64,7 +64,7 @@ You can now perform a more efficient way to bring your existing Kubernetes envir
 
 ### iframe extensions support login with Console SSO
 
-Iframe extensions now benefit from a unified and secure authentication framework using Console Single Sign-On (SSO). This enhancement allows iframe extensions to recognize user permissions and manage authentication and authorization seamlessly. By leveraging Console SSO, only authorized users can access and interact with specific iframe extensions, enhancing overall security and control across Mia-Platform Console.
+Iframe extensions now benefit from a unified and secure authentication framework using Console Single Sign-On (SSO). This enhancement allows iframe extensions to recognize user permissions and manage authentication and authorization seamlessly. By leveraging Console SSO in your extensions, only authorized users can access and interact with specific iframe extensions, enhancing overall security and control across Mia-Platform Console.
 
 ### Auto-generated form in Infrastructure Resource Creation 
 
