--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -48,7 +48,7 @@ When inside any Project, simply type `/debug` in the Mia-Assistant chat and star
 
 [...]
 
-### Environment centric workflow for Projects 
+### Environment centric workflow for Projects (only for Enhanced Projects) <Highlight color="#e5c762">BETA</Highlight>
 
 Mia-Platform Console now features a redesigned environment management system, significantly streamlining your Design workflow. 
 The concept of branches in the Design area has been replaced, with the environment now serving as the central element for each area.   
