added flow manager updates

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -38,7 +38,8 @@ When inside any Project, simply type `/debug` in the Mia-Assistant chat and star
 
 ### AI Agents Orchestration with Flow Manager
 
-[...]
+The Flow Manager now allows for seamless orchestration of **AI Agents** within workflows. This new functionality enables users to integrate and manage multiple AI agents, coordinating their actions to automate complex tasks more efficiently. 
+By using the Flow Manager Configurator, organizations can improve operational efficiency, ensuring that AI agents collaborate effectively to deliver faster and more accurate results.
 
 ### AI Coder Agent
 
@@ -58,11 +59,11 @@ In v14, we've significantly enhanced the Software Catalog, improving both manage
 
 ### Software Items Lifecycle renewed
 
-We've also revamped the **release life cycle** with new stages like `Coming soon`,`Draft`,`Published`,`Maintenance`,`Deprecated`,`Archived`, and `Deleted`. These changes create a more structured and adaptable framework for managing catalog items, from development to retirement, making the process more efficient and reliable.
+We've also revamped the **release life cycle** with new stages like `Coming soon`,`Draft`,`Published`,`Maintenance`,`Deprecated`,`Archived`, and `Deleted`. These changes provide a more structured and adaptable framework for managing catalog items, from development to retirement, making the process more efficient and reliable.
 
 ### Headless Catalog
 
-[...]
+Furthermore, the marketplace APIs have been optimized and are now officially published on the API portal, ensuring easy access for all users.
 
 ## Real time data integration
 
@@ -71,6 +72,10 @@ The Real-Time Data Integration capability is focusing on streamlining data colle
 ### Data Lineage
 
 [...]
+
+### New Flow Manager Configurator layout
+
+The Flow Manager Configurator layout has been redesigned to provide enhanced control and visibility. Users can now easily view and manage flows, add external executors, and track commands, events, and state transitions, improving the efficiency and flexibility of self-service application management.
 
 ### Feature
 
