--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -55,11 +55,13 @@ The Self-Service Application Development paradigm aims to significantly accelera
 
 ### Enhancing Software Catalog and Release Management
 
-In v14, we've significantly enhanced the Software Catalog, improving both management and precision. Key updates include comprehensive item schema reviews, ensuring all definitions are standardized, fully documented, and easily accessible to stakeholders. Addiotionally, the manifests for the public items in the Mia-Platform catalog are now publicly available [here], offering greater transparency.
+In v14, we've significantly enhanced the Software Catalog, improving both management and precision. Key updates include comprehensive item schema reviews, ensuring all definitions are standardized, fully documented, and easily accessible to stakeholders. Addiotionally, the manifests for the public items in the Mia-Platform catalog are now publicly available [here](https://github.com/mia-platform-marketplace/public-catalog), offering greater transparency.
 
 ### Software Items Lifecycle renewed
 
 We've also revamped the **release life cycle** with new stages like `Coming soon`,`Draft`,`Published`,`Maintenance`,`Deprecated`,`Archived`, and `Deleted`. These changes provide a more structured and adaptable framework for managing catalog items, from development to retirement, making the process more efficient and reliable.
+
+![SC new release stages](img/software-catalog-release-stages.png)
 
 ### Headless Catalog
 
@@ -76,6 +78,8 @@ The Real-Time Data Integration capability is focusing on streamlining data colle
 ### New Flow Manager Configurator layout
 
 The Flow Manager Configurator layout has been redesigned to provide enhanced control and visibility. Users can now easily view and manage flows, add external executors, and track commands, events, and state transitions, improving the efficiency and flexibility of self-service application management.
+
+![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
 
 ### Feature
 
