feat(catalog): add mongodb native connection details (#2052)
* feat(catalog): add mongodb native connection details

* small adjustments

* fix img

* Update docs/data_catalog/frontend/data_catalog_connections.mdx

* Update docs/data_catalog/frontend/data_catalog_connections.mdx

* small fixes

* feat(catalog): update compatibility matrix

* feat(catalog): update compatibility matrix

* chore: spellcheck

* chore: spellcheck

---------

Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>

--- a/docs/data_catalog/data_catalog_open_lineage.mdx
+++ b/docs/data_catalog/data_catalog_open_lineage.mdx
@@ -287,3 +287,7 @@ The following steps needs to be followed:
 ```shell
 docker run --pull=always <registry-url>/data-fabric/fabric-admin:latest open-lineage update-records --url=<MONGODB_URL>
 ```
+
+### From 0.3.0 to 0.3.x
+
+Run [`fabric_admin:0.5.2` cronjob](/data_catalog/database_setup.mdx#cli-configuration) to update persistence layer collections schemas.
