--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -41,7 +41,7 @@ When inside any Project, simply type `/debug` in the Mia-Assistant chat and star
 The Flow Manager now allows for seamless orchestration of **AI Agents** within workflows. This new functionality enables users to integrate and manage multiple AI agents, coordinating their actions to automate complex tasks more efficiently. 
 By using the Flow Manager Configurator, organizations can improve operational efficiency, ensuring that AI agents collaborate effectively to deliver faster and more accurate results.
 
-### AI-Powered Data Discovery for DPOs: Enhancing the Data Catalog Experience
+### AI-Compliance for Data Catalog: AI-powered Data Discovery
 
 To meet the increasing demand for accessible, reliable, and governance-oriented Data Discovery, the Data Catalog has been enhanced with an AI Assistant. Through a dedicated user interface, users - *especially non-technical roles like Data Protection Officers (DPOs)* - can interact with a chat system to explore metadata and information about data assets (e.g., sensitive data fields) using natural language.
 
